Set correct opacity and z-index for image list items with open meta-info

--- a/css/imbo-plugin.css
+++ b/css/imbo-plugin.css
@@ -318,6 +318,12 @@ button.upload-scanpix-image {
     opacity: 1;
 }
 
+/* If user has clicked the info button to display meta info, it will always be visible */
+.meta-open .image-toolbar {
+    opacity: 1;
+    z-index: 500;
+}
+
 .image-toolbar button {
     background: none;
     opacity: 0.6;
@@ -352,7 +358,7 @@ button.upload-scanpix-image {
 .meta-info {
     position: absolute;
     top: 40px;
-    z-index: 100;
+    z-index: 200;
     min-height: 150px;
     width: 205.5%;
     color: #ddd;
